Use singleton and an abstract class for a common interface
Used resourcemanager, soundmanager and surfacemanager

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,8 @@ tuxfootballdoc_DATA = \
 	AUTHORS\
 	ChangeLog\
 	INSTALL\
-	NEWS
+	NEWS \
+	src/SFont-README
 
 EXTRA_DIST = $(tuxfootballdoc_DATA) \
 	$(data_DATA)
