Add gettext support
(Note: does currently not work for unkown reasons)

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,15 @@ tuxfootballdoc_DATA = \
 	src/SFont-README
 
 EXTRA_DIST = $(tuxfootballdoc_DATA) \
-	$(data_DATA)
+	$(data_DATA) \
+	intltool-extract.in \
+	intltool-merge.in \
+	intltool-update.in
+
+DISTCLEANFILES = \
+	intltool-extract \
+	intltool-merge \
+	intltool-update
 
 # Copy all the spec files. Of cource, only one is actually used.
 dist-hook:
