Check for some further build requirements
Gathered from running autoscan

--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
-AC_INIT(tuxfootball, 0.1.1, http://tuxfootball.sourceforge.net/)
+AC_PREREQ(2.59)
+AC_INIT([tuxfootball], [0.1.1], http://tuxfootball.sourceforge.net/)
 
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, [dist-bzip2])
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
@@ -12,12 +13,19 @@ AC_PROG_CXX
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 AM_PROG_CC_C_O
+AC_C_CONST
+AC_FUNC_VPRINTF
+AC_HEADER_STDBOOL
+AC_PROG_RANLIB
 
+# Checks for library functions.
+AC_CHECK_FUNCS([atexit pow sqrt])
 
 
 dnl ***************************************************************************
 dnl Internatinalization
 dnl ***************************************************************************
+AC_CHECK_HEADERS([libintl.h])
 GETTEXT_PACKAGE=tuxfootball
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
@@ -49,3 +57,5 @@ po/Makefile.in
 data/Makefile
 data/graphics/Makefile
 ])
+
+AC_MSG_RESULT([Configuration successful! Now type 'make'.])
