Fix the build for anjuta

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,36 @@
-.anjuta
-.tm_project*
-.libs
-.deps
-.libs
 .*swp
-.nautilus-metafile.xml
-*.autosave
-*.pws
 *.bak
 *~
-#*#
-*.gladep
+*.a
+*.o
 *.la
 *.lo
+Makefile
+Makefile.in
 *.log
-*.o
-*.class
-*.pyc
-aclocal.m4
-autom4te.cache
+config.guess
 config.h
 config.h.in
-config.log
 config.status
+config.sub
 configure
+stamp-h*
+.deps
+aclocal.m4
+autom4te.cache
+.anjuta
 intltool-extract*
 intltool-merge*
 intltool-modules*
 intltool-update*
+POTFILES
+*.gmo
+stamp-it
+*.cache
 libtool
-prepare.sh
-stamp-h*
 ltmain.sh
-mkinstalldirs
-config.guess
-config.sub
-Makefile
-Makefile.in
+TODO.tasks
+tuxfootball
+.anjuta_sym_db.db
+*.tar.gz
+*.tar.bz2
