--- a/data/graphics/Makefile.am
+++ b/data/graphics/Makefile.am
@@ -2535,6 +2535,8 @@ team2_DATA = \
 	team2/walking0384.png
 
 EXTRA_DIST = \
+	football.png \
+	footballshadow.png \
 	homeplayermarker.png \
 	homeplayermarker.png \
 	$(pitchlines_DATA)\
