--- a/tuxfootball.cbp
+++ b/tuxfootball.cbp
@@ -12,16 +12,9 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Wextra" />
 					<Add option="-g" />
-					<Add directory="lib\SDL" />
-					<Add directory="Z:\usr\include\SDL" />
 				</Compiler>
-				<Linker>
-					<Add library="SDL" />
-					<Add library="SDL_mixer" />
-					<Add library="SDL_image" />
-					<Add directory="lib" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin\Release\tuxfootball" prefix_auto="1" extension_auto="1" />
@@ -38,8 +31,16 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
+			<Add option="-fexceptions -mwindows" />
+			<Add directory="lib\SDL" />
+			<Add directory="Z:\usr\include\SDL" />
 		</Compiler>
+		<Linker>
+			<Add library="SDL" />
+			<Add library="SDL_image" />
+			<Add library="SDL_mixer" />
+			<Add directory="lib" />
+		</Linker>
 		<Unit filename="src\SFont.c">
 			<Option compilerVar="CC" />
 		</Unit>
