Move gamestates to own directory

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,110 +18,110 @@ AM_CPPFLAGS = \
 bin_PROGRAMS = tuxfootball
 
 tuxfootball_SOURCES = \
-	ball.cpp     \
-	body.cpp     \
-	camera.cpp     \
-	controller.cpp     \
-	extratimefirsthalfstate.cpp     \
-	extratimehalftimestate.cpp     \
-	extratimesecondhalfstate.cpp     \
-	extratimestate.cpp     \
-	firsthalfstate.cpp     \
+	gamestates/extratimefirsthalfstate.cpp \
+	gamestates/extratimehalftimestate.cpp \
+	gamestates/extratimesecondhalfstate.cpp \
+	gamestates/extratimestate.cpp \
+	gamestates/firsthalfstate.cpp \
+	gamestates/fulltimestate.cpp \
+	gamestates/halftimestate.cpp \
+	gamestates/mainmenustate.cpp \
+	gamestates/matchabortedstate.cpp \
+	gamestates/matchfinishedstate.cpp \
+	gamestates/matchstartstate.cpp \
+	gamestates/nationalanthemstate.cpp \
+	gamestates/penaltyshootoutstate.cpp \
+	gamestates/redefinekeysstate.cpp \
+	gamestates/secondhalfstate.cpp \
+	gamestates/videomenustate.cpp \
+	gamestates/statebase.cpp \
+	gamestates/extratimefirsthalfstate.h \
+	gamestates/extratimehalftimestate.h \
+	gamestates/extratimesecondhalfstate.h \
+	gamestates/extratimestate.h \
+	gamestates/firsthalfstate.h \
+	gamestates/fulltimestate.h \
+	gamestates/halftimestate.h \
+	gamestates/mainmenustate.h \
+	gamestates/matchabortedstate.h \
+	gamestates/matchfinishedstate.h \
+	gamestates/matchstartstate.h \
+	gamestates/nationalanthemstate.h \
+	gamestates/penaltyshootoutstate.h \
+	gamestates/redefinekeysstate.h \
+	gamestates/secondhalfstate.h \
+	gamestates/statebase.h \
+	gamestates/videomenustate.h \
+	ball.cpp \
+	body.cpp \
+	camera.cpp \
+	controller.cpp \
 	fontmanager.cpp \
-	fulltimestate.cpp     \
-	gameengine.cpp     \
-	graphics.cpp     \
-	halftimestate.cpp     \
-	main.cpp     \
-	mainmenu.cpp     \
-	mainmenustate.cpp     \
-	matchabortedstate.cpp     \
-	matchfinishedstate.cpp     \
-	matchstartstate.cpp     \
-	matrix.cpp     \
-	menu.cpp     \
-	menubutton.cpp     \
-	menuitem.cpp     \
-	menukeyselect.cpp     \
-	menulabel.cpp     \
-	menuoptionlist.cpp     \
-	nationalanthemstate.cpp     \
-	penaltyshootoutstate.cpp     \
-	pitch.cpp     \
-	player.cpp     \
-	point3d.cpp     \
-	rect.cpp     \
-	redefinekeysmenu.cpp     \
-	redefinekeysstate.cpp     \
-	secondhalfstate.cpp     \
-	segment.cpp     \
-	soundmanager.cpp     \
-	spriteobject.cpp     \
-	spritesequence.cpp     \
-	statebase.cpp     \
-	surfacemanager.cpp     \
-	team.cpp     \
-	tilemap.cpp     \
-	videomenustate.cpp     \
-	videosettingsmenu.cpp     \
-	SFont.c     \
-	ball.h     \
-	body.h     \
-	camera.h     \
-	const.h     \
-	controller.h     \
-	extratimefirsthalfstate.h     \
-	extratimehalftimestate.h     \
-	extratimesecondhalfstate.h     \
-	extratimestate.h     \
-	firsthalfstate.h     \
+	gameengine.cpp \
+	graphics.cpp \
+	main.cpp \
+	mainmenu.cpp \
+	matrix.cpp \
+	menu.cpp \
+	menubutton.cpp \
+	menuitem.cpp \
+	menukeyselect.cpp \
+	menulabel.cpp \
+	menuoptionlist.cpp \
+	pitch.cpp \
+	player.cpp \
+	point3d.cpp \
+	rect.cpp \
+	redefinekeysmenu.cpp \
+	segment.cpp \
+	soundmanager.cpp \
+	spriteobject.cpp \
+	spritesequence.cpp \
+	surfacemanager.cpp \
+	team.cpp \
+	tilemap.cpp \
+	videosettingsmenu.cpp \
+	SFont.c \
+	ball.h \
+	body.h \
+	camera.h \
+	const.h \
+	controller.h \
 	Font.hpp \
 	fontmanager.h \
-	fulltimestate.h     \
-	gameengine.h     \
-	graphics.h     \
-	halftimestate.h     \
-	mainmenu.h     \
-	mainmenustate.h     \
-	matchabortedstate.h     \
-	matchfinishedstate.h     \
-	matchstartstate.h     \
-	matrix.h     \
-	menu.h     \
-	menubutton.h     \
-	menuitem.h     \
-	menukeyselect.h     \
-	menulabel.h     \
-	menuoptionlist.h     \
-	nationalanthemstate.h     \
-	penaltyshootoutstate.h     \
-	pitch.h     \
-	player.h     \
-	point3d.h     \
-	rect.h     \
-	redefinekeysmenu.h     \
-	redefinekeysstate.h     \
-	secondhalfstate.h     \
-	segment.h     \
-	SFont.h     \
-	soundmanager.h     \
-	spriteobject.h     \
-	spritesequence.h     \
-	statebase.h     \
-	surfacemanager.h     \
-	team.h     \
-	tilemap.h     \
-	videomenustate.h     \
-	videosettingsmenu.h     \
-	resourcemanager.cpp     \
+	gameengine.h \
+	graphics.h \
+	mainmenu.h \
+	matrix.h \
+	menu.h \
+	menubutton.h \
+	menuitem.h \
+	menukeyselect.h \
+	menulabel.h \
+	menuoptionlist.h \
+	pitch.h \
+	player.h \
+	point3d.h \
+	rect.h \
+	redefinekeysmenu.h \
+	segment.h \
+	SFont.h \
+	soundmanager.h \
+	spriteobject.h \
+	spritesequence.h \
+	surfacemanager.h \
+	team.h \
+	tilemap.h \
+	videosettingsmenu.h \
+	resourcemanager.cpp \
 	resourcemanager.h
 
 tuxfootball_LDFLAGS = \
 	$(SDL_LIBS)
 
-tuxfootball_CFLAGS =            \
+tuxfootball_CFLAGS =    \
 	$(SDL_CFLAGS)
 
-tuxfootball_CXXFLAGS =              \
+tuxfootball_CXXFLAGS =      \
 	$(SDL_CFLAGS)
 
