--- a/tuxfootball.cbp
+++ b/tuxfootball.cbp
@@ -64,37 +64,37 @@
 		<Unit filename="src\const.h" />
 		<Unit filename="src\controller.cpp" />
 		<Unit filename="src\controller.h" />
-		<Unit filename="src\extratimefirsthalfstate.cpp" />
-		<Unit filename="src\extratimefirsthalfstate.h" />
-		<Unit filename="src\extratimehalftimestate.cpp" />
-		<Unit filename="src\extratimehalftimestate.h" />
-		<Unit filename="src\extratimesecondhalfstate.cpp" />
-		<Unit filename="src\extratimesecondhalfstate.h" />
-		<Unit filename="src\extratimestate.cpp" />
-		<Unit filename="src\extratimestate.h" />
-		<Unit filename="src\firsthalfstate.cpp" />
-		<Unit filename="src\firsthalfstate.h" />
+		<Unit filename="src\gamestates\extratimefirsthalfstate.cpp" />
+		<Unit filename="src\gamestates\extratimefirsthalfstate.h" />
+		<Unit filename="src\gamestates\extratimehalftimestate.cpp" />
+		<Unit filename="src\gamestates\extratimehalftimestate.h" />
+		<Unit filename="src\gamestates\extratimesecondhalfstate.cpp" />
+		<Unit filename="src\gamestates\extratimesecondhalfstate.h" />
+		<Unit filename="src\gamestates\extratimestate.cpp" />
+		<Unit filename="src\gamestates\extratimestate.h" />
+		<Unit filename="src\gamestates\firsthalfstate.cpp" />
+		<Unit filename="src\gamestates\firsthalfstate.h" />
 		<Unit filename="src\fontmanager.cpp" />
 		<Unit filename="src\fontmanager.h" />
-		<Unit filename="src\fulltimestate.cpp" />
-		<Unit filename="src\fulltimestate.h" />
+		<Unit filename="src\gamestates\fulltimestate.cpp" />
+		<Unit filename="src\gamestates\fulltimestate.h" />
 		<Unit filename="src\gameengine.cpp" />
 		<Unit filename="src\gameengine.h" />
 		<Unit filename="src\graphics.cpp" />
 		<Unit filename="src\graphics.h" />
-		<Unit filename="src\halftimestate.cpp" />
-		<Unit filename="src\halftimestate.h" />
+		<Unit filename="src\gamestates\halftimestate.cpp" />
+		<Unit filename="src\gamestates\halftimestate.h" />
 		<Unit filename="src\main.cpp" />
 		<Unit filename="src\mainmenu.cpp" />
 		<Unit filename="src\mainmenu.h" />
-		<Unit filename="src\mainmenustate.cpp" />
-		<Unit filename="src\mainmenustate.h" />
-		<Unit filename="src\matchabortedstate.cpp" />
-		<Unit filename="src\matchabortedstate.h" />
-		<Unit filename="src\matchfinishedstate.cpp" />
-		<Unit filename="src\matchfinishedstate.h" />
-		<Unit filename="src\matchstartstate.cpp" />
-		<Unit filename="src\matchstartstate.h" />
+		<Unit filename="src\gamestates\mainmenustate.cpp" />
+		<Unit filename="src\gamestates\mainmenustate.h" />
+		<Unit filename="src\gamestates\matchabortedstate.cpp" />
+		<Unit filename="src\gamestates\matchabortedstate.h" />
+		<Unit filename="src\gamestates\matchfinishedstate.cpp" />
+		<Unit filename="src\gamestates\matchfinishedstate.h" />
+		<Unit filename="src\gamestates\matchstartstate.cpp" />
+		<Unit filename="src\gamestates\matchstartstate.h" />
 		<Unit filename="src\matrix.cpp" />
 		<Unit filename="src\matrix.h" />
 		<Unit filename="src\menu.cpp" />
@@ -109,10 +109,10 @@
 		<Unit filename="src\menulabel.h" />
 		<Unit filename="src\menuoptionlist.cpp" />
 		<Unit filename="src\menuoptionlist.h" />
-		<Unit filename="src\nationalanthemstate.cpp" />
-		<Unit filename="src\nationalanthemstate.h" />
-		<Unit filename="src\penaltyshootoutstate.cpp" />
-		<Unit filename="src\penaltyshootoutstate.h" />
+		<Unit filename="src\gamestates\nationalanthemstate.cpp" />
+		<Unit filename="src\gamestates\nationalanthemstate.h" />
+		<Unit filename="src\gamestates\penaltyshootoutstate.cpp" />
+		<Unit filename="src\gamestates\penaltyshootoutstate.h" />
 		<Unit filename="src\pitch.cpp" />
 		<Unit filename="src\pitch.h" />
 		<Unit filename="src\player.cpp" />
@@ -123,12 +123,12 @@
 		<Unit filename="src\rect.h" />
 		<Unit filename="src\redefinekeysmenu.cpp" />
 		<Unit filename="src\redefinekeysmenu.h" />
-		<Unit filename="src\redefinekeysstate.cpp" />
-		<Unit filename="src\redefinekeysstate.h" />
+		<Unit filename="src\gamestates\redefinekeysstate.cpp" />
+		<Unit filename="src\gamestates\redefinekeysstate.h" />
 		<Unit filename="src\resourcemanager.cpp" />
 		<Unit filename="src\resourcemanager.h" />
-		<Unit filename="src\secondhalfstate.cpp" />
-		<Unit filename="src\secondhalfstate.h" />
+		<Unit filename="src\gamestates\secondhalfstate.cpp" />
+		<Unit filename="src\gamestates\secondhalfstate.h" />
 		<Unit filename="src\segment.cpp" />
 		<Unit filename="src\segment.h" />
 		<Unit filename="src\soundmanager.cpp" />
@@ -137,16 +137,16 @@
 		<Unit filename="src\spriteobject.h" />
 		<Unit filename="src\spritesequence.cpp" />
 		<Unit filename="src\spritesequence.h" />
-		<Unit filename="src\statebase.cpp" />
-		<Unit filename="src\statebase.h" />
+		<Unit filename="src\gamestates\statebase.cpp" />
+		<Unit filename="src\gamestates\statebase.h" />
 		<Unit filename="src\surfacemanager.cpp" />
 		<Unit filename="src\surfacemanager.h" />
 		<Unit filename="src\team.cpp" />
 		<Unit filename="src\team.h" />
 		<Unit filename="src\tilemap.cpp" />
 		<Unit filename="src\tilemap.h" />
-		<Unit filename="src\videomenustate.cpp" />
-		<Unit filename="src\videomenustate.h" />
+		<Unit filename="src\gamestates\videomenustate.cpp" />
+		<Unit filename="src\gamestates\videomenustate.h" />
 		<Unit filename="src\videosettingsmenu.cpp" />
 		<Unit filename="src\videosettingsmenu.h" />
 		<Extensions>
