--- a/tuxfootball.vcxproj
+++ b/tuxfootball.vcxproj
@@ -79,22 +79,22 @@
     <ClCompile Include="src\body.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\controller.cpp" />
-    <ClCompile Include="src\extratimefirsthalfstate.cpp" />
-    <ClCompile Include="src\extratimehalftimestate.cpp" />
-    <ClCompile Include="src\extratimesecondhalfstate.cpp" />
-    <ClCompile Include="src\extratimestate.cpp" />
-    <ClCompile Include="src\firsthalfstate.cpp" />
+    <ClCompile Include="src\gamestates\extratimefirsthalfstate.cpp" />
+    <ClCompile Include="src\gamestates\extratimehalftimestate.cpp" />
+    <ClCompile Include="src\gamestates\extratimesecondhalfstate.cpp" />
+    <ClCompile Include="src\gamestates\extratimestate.cpp" />
+    <ClCompile Include="src\gamestates\firsthalfstate.cpp" />
     <ClCompile Include="src\fontmanager.cpp" />
-    <ClCompile Include="src\fulltimestate.cpp" />
+    <ClCompile Include="src\gamestates\fulltimestate.cpp" />
     <ClCompile Include="src\gameengine.cpp" />
     <ClCompile Include="src\graphics.cpp" />
-    <ClCompile Include="src\halftimestate.cpp" />
+    <ClCompile Include="src\gamestates\halftimestate.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mainmenu.cpp" />
-    <ClCompile Include="src\mainmenustate.cpp" />
-    <ClCompile Include="src\matchabortedstate.cpp" />
-    <ClCompile Include="src\matchfinishedstate.cpp" />
-    <ClCompile Include="src\matchstartstate.cpp" />
+    <ClCompile Include="src\gamestates\mainmenustate.cpp" />
+    <ClCompile Include="src\gamestates\matchabortedstate.cpp" />
+    <ClCompile Include="src\gamestates\matchfinishedstate.cpp" />
+    <ClCompile Include="src\gamestates\matchstartstate.cpp" />
     <ClCompile Include="src\matrix.cpp" />
     <ClCompile Include="src\menu.cpp" />
     <ClCompile Include="src\menubutton.cpp" />
@@ -102,26 +102,26 @@
     <ClCompile Include="src\menukeyselect.cpp" />
     <ClCompile Include="src\menulabel.cpp" />
     <ClCompile Include="src\menuoptionlist.cpp" />
-    <ClCompile Include="src\nationalanthemstate.cpp" />
-    <ClCompile Include="src\penaltyshootoutstate.cpp" />
+    <ClCompile Include="src\gamestates\nationalanthemstate.cpp" />
+    <ClCompile Include="src\gamestates\penaltyshootoutstate.cpp" />
     <ClCompile Include="src\pitch.cpp" />
     <ClCompile Include="src\player.cpp" />
     <ClCompile Include="src\point3d.cpp" />
     <ClCompile Include="src\rect.cpp" />
     <ClCompile Include="src\redefinekeysmenu.cpp" />
-    <ClCompile Include="src\redefinekeysstate.cpp" />
+    <ClCompile Include="src\gamestates\redefinekeysstate.cpp" />
     <ClCompile Include="src\resourcemanager.cpp" />
-    <ClCompile Include="src\secondhalfstate.cpp" />
+    <ClCompile Include="src\gamestates\secondhalfstate.cpp" />
     <ClCompile Include="src\segment.cpp" />
     <ClCompile Include="src\SFont.c" />
     <ClCompile Include="src\soundmanager.cpp" />
     <ClCompile Include="src\spriteobject.cpp" />
     <ClCompile Include="src\spritesequence.cpp" />
-    <ClCompile Include="src\statebase.cpp" />
+    <ClCompile Include="src\gamestates\statebase.cpp" />
     <ClCompile Include="src\surfacemanager.cpp" />
     <ClCompile Include="src\team.cpp" />
     <ClCompile Include="src\tilemap.cpp" />
-    <ClCompile Include="src\videomenustate.cpp" />
+    <ClCompile Include="src\gamestates\videomenustate.cpp" />
     <ClCompile Include="src\videosettingsmenu.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -130,22 +130,22 @@
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\const.h" />
     <ClInclude Include="src\controller.h" />
-    <ClInclude Include="src\extratimefirsthalfstate.h" />
-    <ClInclude Include="src\extratimehalftimestate.h" />
-    <ClInclude Include="src\extratimesecondhalfstate.h" />
-    <ClInclude Include="src\extratimestate.h" />
+    <ClInclude Include="src\gamestates\extratimefirsthalfstate.h" />
+    <ClInclude Include="src\gamestates\extratimehalftimestate.h" />
+    <ClInclude Include="src\gamestates\extratimesecondhalfstate.h" />
+    <ClInclude Include="src\gamestates\extratimestate.h" />
     <ClInclude Include="src\firsthalfstate.h" />
     <ClInclude Include="src\Font.hpp" />
     <ClInclude Include="src\fontmanager.h" />
-    <ClInclude Include="src\fulltimestate.h" />
+    <ClInclude Include="src\gamestates\fulltimestate.h" />
     <ClInclude Include="src\gameengine.h" />
     <ClInclude Include="src\graphics.h" />
-    <ClInclude Include="src\halftimestate.h" />
+    <ClInclude Include="src\gamestates\halftimestate.h" />
     <ClInclude Include="src\mainmenu.h" />
-    <ClInclude Include="src\mainmenustate.h" />
-    <ClInclude Include="src\matchabortedstate.h" />
-    <ClInclude Include="src\matchfinishedstate.h" />
-    <ClInclude Include="src\matchstartstate.h" />
+    <ClInclude Include="src\gamestates\mainmenustate.h" />
+    <ClInclude Include="src\gamestates\matchabortedstate.h" />
+    <ClInclude Include="src\gamestates\matchfinishedstate.h" />
+    <ClInclude Include="src\gamestates\matchstartstate.h" />
     <ClInclude Include="src\matrix.h" />
     <ClInclude Include="src\menu.h" />
     <ClInclude Include="src\menubutton.h" />
@@ -153,26 +153,26 @@
     <ClInclude Include="src\menukeyselect.h" />
     <ClInclude Include="src\menulabel.h" />
     <ClInclude Include="src\menuoptionlist.h" />
-    <ClInclude Include="src\nationalanthemstate.h" />
-    <ClInclude Include="src\penaltyshootoutstate.h" />
+    <ClInclude Include="src\gamestates\nationalanthemstate.h" />
+    <ClInclude Include="src\gamestates\penaltyshootoutstate.h" />
     <ClInclude Include="src\pitch.h" />
     <ClInclude Include="src\player.h" />
     <ClInclude Include="src\point3d.h" />
     <ClInclude Include="src\rect.h" />
     <ClInclude Include="src\redefinekeysmenu.h" />
-    <ClInclude Include="src\redefinekeysstate.h" />
+    <ClInclude Include="src\gamestates\redefinekeysstate.h" />
     <ClInclude Include="src\resourcemanager.h" />
-    <ClInclude Include="src\secondhalfstate.h" />
+    <ClInclude Include="src\gamestates\secondhalfstate.h" />
     <ClInclude Include="src\segment.h" />
     <ClInclude Include="src\SFont.h" />
     <ClInclude Include="src\soundmanager.h" />
     <ClInclude Include="src\spriteobject.h" />
     <ClInclude Include="src\spritesequence.h" />
-    <ClInclude Include="src\statebase.h" />
+    <ClInclude Include="src\gamestates\statebase.h" />
     <ClInclude Include="src\surfacemanager.h" />
     <ClInclude Include="src\team.h" />
     <ClInclude Include="src\tilemap.h" />
-    <ClInclude Include="src\videomenustate.h" />
+    <ClInclude Include="src\gamestates\videomenustate.h" />
     <ClInclude Include="src\videosettingsmenu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
