--- a/tuxfootball.cbp
+++ b/tuxfootball.cbp
@@ -54,16 +54,6 @@
 		<Unit filename="src\SFont.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="src\SFont.h" />
-		<Unit filename="src\ball.cpp" />
-		<Unit filename="src\ball.h" />
-		<Unit filename="src\body.cpp" />
-		<Unit filename="src\body.h" />
-		<Unit filename="src\camera.cpp" />
-		<Unit filename="src\camera.h" />
-		<Unit filename="src\const.h" />
-		<Unit filename="src\controller.cpp" />
-		<Unit filename="src\controller.h" />
 		<Unit filename="src\gamestates\extratimefirsthalfstate.cpp" />
 		<Unit filename="src\gamestates\extratimefirsthalfstate.h" />
 		<Unit filename="src\gamestates\extratimehalftimestate.cpp" />
@@ -74,19 +64,12 @@
 		<Unit filename="src\gamestates\extratimestate.h" />
 		<Unit filename="src\gamestates\firsthalfstate.cpp" />
 		<Unit filename="src\gamestates\firsthalfstate.h" />
-		<Unit filename="src\fontmanager.cpp" />
-		<Unit filename="src\fontmanager.h" />
 		<Unit filename="src\gamestates\fulltimestate.cpp" />
 		<Unit filename="src\gamestates\fulltimestate.h" />
-		<Unit filename="src\gameengine.cpp" />
-		<Unit filename="src\gameengine.h" />
-		<Unit filename="src\graphics.cpp" />
-		<Unit filename="src\graphics.h" />
 		<Unit filename="src\gamestates\halftimestate.cpp" />
 		<Unit filename="src\gamestates\halftimestate.h" />
-		<Unit filename="src\main.cpp" />
-		<Unit filename="src\mainmenu.cpp" />
-		<Unit filename="src\mainmenu.h" />
+		<Unit filename="src\gamestates\videomenustate.cpp" />
+		<Unit filename="src\gamestates\videomenustate.h" />
 		<Unit filename="src\gamestates\mainmenustate.cpp" />
 		<Unit filename="src\gamestates\mainmenustate.h" />
 		<Unit filename="src\gamestates\matchabortedstate.cpp" />
@@ -95,24 +78,53 @@
 		<Unit filename="src\gamestates\matchfinishedstate.h" />
 		<Unit filename="src\gamestates\matchstartstate.cpp" />
 		<Unit filename="src\gamestates\matchstartstate.h" />
-		<Unit filename="src\matrix.cpp" />
-		<Unit filename="src\matrix.h" />
-		<Unit filename="src\menu.cpp" />
-		<Unit filename="src\menu.h" />
-		<Unit filename="src\menubutton.cpp" />
-		<Unit filename="src\menubutton.h" />
-		<Unit filename="src\menuitem.cpp" />
-		<Unit filename="src\menuitem.h" />
-		<Unit filename="src\menukeyselect.cpp" />
-		<Unit filename="src\menukeyselect.h" />
-		<Unit filename="src\menulabel.cpp" />
-		<Unit filename="src\menulabel.h" />
-		<Unit filename="src\menuoptionlist.cpp" />
-		<Unit filename="src\menuoptionlist.h" />
 		<Unit filename="src\gamestates\nationalanthemstate.cpp" />
 		<Unit filename="src\gamestates\nationalanthemstate.h" />
 		<Unit filename="src\gamestates\penaltyshootoutstate.cpp" />
 		<Unit filename="src\gamestates\penaltyshootoutstate.h" />
+		<Unit filename="src\gamestates\redefinekeysstate.cpp" />
+		<Unit filename="src\gamestates\redefinekeysstate.h" />
+		<Unit filename="src\gamestates\secondhalfstate.cpp" />
+		<Unit filename="src\gamestates\secondhalfstate.h" />
+		<Unit filename="src\gamestates\statebase.cpp" />
+		<Unit filename="src\gamestates\statebase.h" />
+		<Unit filename="src\menu\mainmenu.cpp" />
+		<Unit filename="src\menu\mainmenu.h" />
+		<Unit filename="src\menu\menu.cpp" />
+		<Unit filename="src\menu\menu.h" />
+		<Unit filename="src\menu\redefinekeysmenu.cpp" />
+		<Unit filename="src\menu\redefinekeysmenu.h" />
+		<Unit filename="src\menu\videosettingsmenu.cpp" />
+		<Unit filename="src\menu\videosettingsmenu.h" />
+		<Unit filename="src\menu\elements\menubutton.cpp" />
+		<Unit filename="src\menu\elements\menubutton.h" />
+		<Unit filename="src\menu\elements\menuitem.cpp" />
+		<Unit filename="src\menu\elements\menuitem.h" />
+		<Unit filename="src\menu\elements\menukeyselect.cpp" />
+		<Unit filename="src\menu\elements\menukeyselect.h" />
+		<Unit filename="src\menu\elements\menulabel.cpp" />
+		<Unit filename="src\menu\elements\menu\elements\menulabel.h" />
+		<Unit filename="src\menu\elements\menuoptionlist.cpp" />
+		<Unit filename="src\menu\elements\menuoptionlist.h" />
+		<Unit filename="src\SFont.h" />
+		<Unit filename="src\ball.cpp" />
+		<Unit filename="src\ball.h" />
+		<Unit filename="src\body.cpp" />
+		<Unit filename="src\body.h" />
+		<Unit filename="src\camera.cpp" />
+		<Unit filename="src\camera.h" />
+		<Unit filename="src\const.h" />
+		<Unit filename="src\controller.cpp" />
+		<Unit filename="src\controller.h" />
+		<Unit filename="src\fontmanager.cpp" />
+		<Unit filename="src\fontmanager.h" />
+		<Unit filename="src\gameengine.cpp" />
+		<Unit filename="src\gameengine.h" />
+		<Unit filename="src\graphics.cpp" />
+		<Unit filename="src\graphics.h" />
+		<Unit filename="src\main.cpp" />
+		<Unit filename="src\matrix.cpp" />
+		<Unit filename="src\matrix.h" />
 		<Unit filename="src\pitch.cpp" />
 		<Unit filename="src\pitch.h" />
 		<Unit filename="src\player.cpp" />
@@ -121,14 +133,8 @@
 		<Unit filename="src\point3d.h" />
 		<Unit filename="src\rect.cpp" />
 		<Unit filename="src\rect.h" />
-		<Unit filename="src\redefinekeysmenu.cpp" />
-		<Unit filename="src\redefinekeysmenu.h" />
-		<Unit filename="src\gamestates\redefinekeysstate.cpp" />
-		<Unit filename="src\gamestates\redefinekeysstate.h" />
 		<Unit filename="src\resourcemanager.cpp" />
 		<Unit filename="src\resourcemanager.h" />
-		<Unit filename="src\gamestates\secondhalfstate.cpp" />
-		<Unit filename="src\gamestates\secondhalfstate.h" />
 		<Unit filename="src\segment.cpp" />
 		<Unit filename="src\segment.h" />
 		<Unit filename="src\soundmanager.cpp" />
@@ -137,18 +143,12 @@
 		<Unit filename="src\spriteobject.h" />
 		<Unit filename="src\spritesequence.cpp" />
 		<Unit filename="src\spritesequence.h" />
-		<Unit filename="src\gamestates\statebase.cpp" />
-		<Unit filename="src\gamestates\statebase.h" />
 		<Unit filename="src\surfacemanager.cpp" />
 		<Unit filename="src\surfacemanager.h" />
 		<Unit filename="src\team.cpp" />
 		<Unit filename="src\team.h" />
 		<Unit filename="src\tilemap.cpp" />
 		<Unit filename="src\tilemap.h" />
-		<Unit filename="src\gamestates\videomenustate.cpp" />
-		<Unit filename="src\gamestates\videomenustate.h" />
-		<Unit filename="src\videosettingsmenu.cpp" />
-		<Unit filename="src\videosettingsmenu.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
